Multi-Lang Home Controller

--- a/src/main/webapp/resources/messages_en.properties
+++ b/src/main/webapp/resources/messages_en.properties
@@ -1,2 +1,34 @@
+# Global
 label.springmvc = Happy learning Spring MVC
 label.test = Test
+label.home = Home
+label.login = Login
+label.pwd = Password Setup
+label.settings = Settings
+label.logout = Logout
+# Login
+label.login.username = Username
+label.login.password = Password
+# Post
+label.post.more = More...
+# Upload Button
+label.upload.title = Upload Cover
+# Password Setup
+label.pwd.title = Password Setup
+label.pwd.message = Create New Password
+label.pwd.new = New Password
+label.pwd.retype = Re-Type Password
+# New Page
+label.newpage.title = Create New Page
+label.newpage.name = Title
+# Settings
+label.settings.title = Settings
+label.settings.name = Site Name
+label.settings.slogan = Slogan
+label.settings.url = URL
+# Buttons
+label.btn.ok = OK
+label.btn.cancel = Cancel
+label.btn.save = Save
+label.btn.close = Close
+label.btn.add = Add
