--- a/src/main/webapp/resources/messages_es.properties
+++ b/src/main/webapp/resources/messages_es.properties
@@ -1,2 +1,34 @@
-label.springmvc = Bienvenido a español
+# Global
+label.springmvc = Prueba unitaria de Spring MVC
 label.test = Prueba
+label.home = Inicio
+label.login = Iniciar sesión
+label.pwd = Configurar contraseña
+label.settings = Preferencias
+label.logout = Salir
+# Login
+label.login.username = Usuario
+label.login.password = Contraseña
+# Post
+label.post.more = Más...
+# Upload Button
+label.upload.title = Subir Cover
+# Password Setup
+label.pwd.title = Configurar Contraseña
+label.pwd.message = Crear Nueva Contraseña
+label.pwd.new = Nuevo Password
+label.pwd.retype = Re-Escribir Contraseña
+# New Page
+label.newpage.title = Crear Nueva Página
+label.newpage.name = Título
+# Settings
+label.settings.title = Preferencias
+label.settings.name = Nombre De Sitio
+label.settings.slogan = Slogan
+label.settings.url = URL
+# Buttons
+label.btn.ok = Hecho
+label.btn.cancel = Cancelar
+label.btn.save = Guardar
+label.btn.close = Cerrar
+label.btn.add = Agegar
