--- a/src/main/webapp/resources/messages_en.properties
+++ b/src/main/webapp/resources/messages_en.properties
@@ -1,2 +1,36 @@
 # English labels
-label.title=Home Page
+# Globals
+label.title = Home Page
+label.login = Login
+label.pwd = Password Setup
+label.settings = Settings
+label.logout = Logout
+label.btn.login = Login
+label.btn.close = Close
+label.btn.save = Save
+label.btn.ok = OK
+# Login
+label.login.title = Admin Login
+label.login.user = Username
+label.login.pass = Passsword
+# Password setup
+label.pwd.title = New Password
+label.pwd.pwd1 = Password
+label.pwd.pwd2 = Re-Type Password
+# Setup Wizard
+label.setup.title = Welcome - Setup Wizard
+label.setup.alert = Setup Wizard:<br />Balero CMS will configure your system.
+label.setup.btn = Setup And Insert Data Sample
+# Settings
+label.settings.sitename = Sitename
+label.settings.slogan = Slogan
+label.settings.url = URL
+# Comments
+label.comments.name = Name
+label.comments.comment = Comment
+# Covers
+label.upload.title = Upload Cover
+label.upload.btn = Upload
+# New Page
+label.page.new = New Page
+label.bn.save=Save
