Views multi-lang support

--- a/src/main/webapp/resources/messages_en.properties
+++ b/src/main/webapp/resources/messages_en.properties
@@ -33,4 +33,6 @@ label.upload.title = Upload Cover
 label.upload.btn = Upload
 # New Page
 label.page.new = New Page
-label.bn.save=Save
+label.bn.save = Save
+# Installer
+label.btn.installer = Run Installer
