--- a/src/main/webapp/resources/messages_es.properties
+++ b/src/main/webapp/resources/messages_es.properties
@@ -20,9 +20,10 @@ label.settings.slogan=Slogan
 label.settings.url=URL
 label.comments.name=Nombre
 label.comments.comment=Comentario
-label.upload.title=Subir Socer
+label.upload.title=Subir Cover
 label.upload.btn=Subir
 label.btn.save=Guardar
 label.btn.ok=Hecho
 label.page.new=Nueva Página
 label.setup.alert=Instalación\: <br />Balero CMS configurará su sistema.
+label.btn.installer=Ejecutar Instalador
