--- a/src/main/webapp/resources/messages_en.properties
+++ b/src/main/webapp/resources/messages_en.properties
@@ -33,6 +33,7 @@ label.upload.title = Upload Cover
 label.upload.btn = Upload
 # New Page
 label.page.new = New Page
+label.page.title = Title
 label.bn.save = Save
 # Installer
 label.btn.installer = Run Installer
