--- a/src/main/webapp/resources/messages_es.properties
+++ b/src/main/webapp/resources/messages_es.properties
@@ -27,3 +27,4 @@ label.btn.ok=Hecho
 label.page.new=Nueva Página
 label.setup.alert=Instalación\: <br />Balero CMS configurará su sistema.
 label.btn.installer=Ejecutar Instalador
+label.page.title=Título
