Code optimization, message center, slug pages.

--- a/src/main/webapp/resources/messages_es.properties
+++ b/src/main/webapp/resources/messages_es.properties
@@ -28,3 +28,5 @@ label.page.new=Nueva Página
 label.setup.alert=Instalación\: <br />Balero CMS configurará su sistema.
 label.btn.installer=Ejecutar Instalador
 label.page.title=Título
+label.post.slug=Slug
+label.page.hidden=Agregar a barra de navegación
