--- a/src/main/webapp/resources/messages_en.properties
+++ b/src/main/webapp/resources/messages_en.properties
@@ -33,7 +33,10 @@ label.upload.title = Upload Cover
 label.upload.btn = Upload
 # New Page
 label.page.new = New Page
+label.page.hidden = Add to pagination bar
 label.page.title = Title
 label.bn.save = Save
 # Installer
 label.btn.installer = Run Installer
+# Post
+label.post.slug = Slug
