--- a/src/main/webapp/resources/messages_en.properties
+++ b/src/main/webapp/resources/messages_en.properties
@@ -34,6 +34,7 @@ label.upload.btn = Upload
 # New Page
 label.page.new = New Page
 label.page.hidden = Add to pagination bar
+label.page.slugerror = Slug name already exists. Choose another page name.
 label.page.title = Title
 label.bn.save = Save
 # Installer
