--- a/src/main/webapp/resources/messages_es.properties
+++ b/src/main/webapp/resources/messages_es.properties
@@ -30,3 +30,4 @@ label.btn.installer=Ejecutar Instalador
 label.page.title=Título
 label.post.slug=Slug
 label.page.hidden=Agregar a barra de navegación
+label.page.slugerror=El slug ya existe. Selecciona otro nombre de página.
