--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -10,6 +10,9 @@ label.bn.save=Guardar
 label.login.title=Logeo
 label.login.user=Usuario
 label.login.pass=Contraseña
+label.login.register = Registrarme
+label.login.registerok = Usuario registrado correctamente! Te puedes logear!
+label.login.logout = Desconectado correctamente!
 label.pwd.title=Nueva Contraseña
 label.pwd.pwd1=Contraseña
 label.pwd.pwd2=Re-Escribir Contraseña
