--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -13,6 +13,9 @@ label.btn.ok = OK
 label.login.title = Admin Login
 label.login.user = Username
 label.login.pass = Passsword
+label.login.register = Register
+label.login.registerok = User registered success! You can login!
+label.login.logout = Logout Successfully!
 # Password setup
 label.pwd.title = New Password
 label.pwd.pwd1 = Password
